to cocertando a pagina de desenvolvedores

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </section>
 
         <!-- fonte das imagens: https://commons.wikimedia.org/wiki/Category:SVG_chess_pieces -->
-        <main>
+        <main tabindex="0">
 
             <section id="game-over">
                 <div>
