--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -25,8 +25,10 @@
         </div>
         <nav>
             <div class="opcoes"><a href="index.html">Jogar</a></div>
-            <div class="opcoes" id="login-btn">Login</div>
-            <div class="opcoes" id="configuracoes-btn">Configurações</div>
+            <div class="opcoes"><a href="#projeto">Projeto</a></div>
+            <div class="opcoes"><a href="#arthur">Arthur-Teles</a></div>
+            <div class="opcoes"><a href="#eduardo">edu15076</a></div>
+            <div class="opcoes"><a href="#eloy">El0y-c0sm0</a></div>
         </nav>
     </header>
     <main id="desenvolvedores">
@@ -44,30 +46,30 @@
             <article  class="titulos">
                 <h2>Desenvolvedores</h2>
             </article>
-            <article class="conteudo devs">
+            <article class="conteudo">
                 <div class="dev-dados">
                     <img src="img/devs/8 Sem Título_20221023114358.png">
-                    <h3>Arthur Leão</h3>
+                    <h3 id="arthur">Arthur Leão</h3>
                     <span class="github"><a href="https://github.com/Arthur-Teles">Arthur-Teles</a></span>
                 </div>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </article>
-            <article class="conteudo devs">
+            <article class="conteudo">
                 <div class="dev-dados">
                     <img src="img/devs/8 Sem Título_20221023114358.png">
-                    <h3>Eduardo Costa</h3>
+                    <h3 id="eduardo">Eduardo Costa</h3>
                     <span class="github"><a href="https://github.com/edu15076">edu15076</a></span>
                 </div>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </article>
-            <article class="conteudo devs">
+            <article class="conteudo">
                 <div class="dev-dados">
                     <img src="img/devs/8 Sem Título_20221023114358.png">
-                    <h3>Eloy Ribeiro</h3>
+                    <h3 id="eloy">Eloy Ribeiro</h3>
                     <span class="github"><a href="https://github.com/El0y-C0SM0">El0y-c0sm0</a></span>
                 </div>
                 <p>
