--- a/index.html
+++ b/index.html
@@ -214,5 +214,6 @@
         <script src="scripts/chess.js"></script>
         <script src="scripts/menus.js"></script>
         <script src="scripts/login.js"></script>
+        <script src="scripts/engines.js"></script>
     </body>
 </html>
