melhorei a pagina sobre nós, adicionei minhas informações(falta minha foto) e organizei a pasta de engines

--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR" id="desenvolvedores-body">
+<html lang="pt-BR" id="desenvolvedores-html">
 <head>
     <head>
         <meta charset="UTF-8">
@@ -24,11 +24,11 @@
             </label>
         </div>
         <nav>
-            <div class="opcoes"><a href="index.html">Jogar</a></div>
-            <div class="opcoes"><a href="#projeto">Projeto</a></div>
-            <div class="opcoes"><a href="#arthur">Arthur-Teles</a></div>
-            <div class="opcoes"><a href="#eduardo">edu15076</a></div>
-            <div class="opcoes"><a href="#eloy">El0y-c0sm0</a></div>
+            <a href="index.html"><div class="opcoes">Jogar</div></a>
+            <a href="#projeto"><div class="opcoes">Projeto</div></a>
+            <a href="#arthur"><div class="opcoes">Arthur-Teles</div></a>
+            <a href="#eduardo"><div class="opcoes">edu15076</div></a>
+            <a href="#eloy"><div class="opcoes">El0y-c0sm0</div></a>
         </nav>
     </header>
     <main id="desenvolvedores">
@@ -38,7 +38,7 @@
             </article>
             <article class="conteudo">
                 <p>
-                    Lorem ipsum dolor sit amet. 33 molestiae doloribus aut ipsa asperiores ut dolores aperiam ea eaque quia aut voluptatem praesentium eum vitae rerum qui nesciunt blanditiis. Hic modi magnam et pariatur quibusdam ut necessitatibus tenetur et velit optio sed quasi architecto et reiciendis maiores eos minus molestiae. Vel culpa sint non facilis excepturi quo aliquam laborum est maxime esse sit voluptatibus ipsam eos sunt quibusdam et facilis dolorem. Ut unde quisquam est voluptatem voluptate qui nihil dolore.
+                    Chess é um projeto desenvolvido por <a href="https://github.com/Arthur-Teles">Arthur Leão</a>, <a href="https://github.com/edu15076">Eduardo Costa</a> e <a href="https://github.com/El0y-C0SM0">Eloy Ribeiro</a> para um trabalho escolar da matéria de Projetos para Web. A ideia (que foi concretizada) era fazer um site de xadrez moderno e minimilista, com a possibilidade do usuário escolher jogar o modo para dois jogadores ou contra uma das três engines, cada uma projetada por um dos devs. O site também tem uma espécie de login que salva suas informações no próprio navegador, assim restaurando algumas configurações como o tema do tabuleiro.  
                 </p>
             </article>
         </section>
@@ -73,7 +73,7 @@
                     <span class="github"><a href="https://github.com/El0y-C0SM0">El0y-c0sm0</a></span>
                 </div>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Bão? Sou um dos devs que projetou. Um pouco sobre mim é que sou aluno de informática do CEFET-MG, sou fascinado por ciências de todo tipo, gosto de programar tanto backend quanto o frontend e também gosto de programação competitiva. Consumo um pouco de animes, desenhos, filmes, séries e livros. Não sou um jogador de xadrez tão bom, mas com o tempo tô melohorando. (alguns dizem que sou nerd e gosto bastante dessa cultura)
                 </p>
             </article>
         </section>
