--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <div class="opcoes" id="login-btn">Login</div>          
             <div class="opcoes" id="configuracoes-btn">Configurações</div>
-            <div class="opcoes"><a href="desenvolvedores.html">Desenvolvedores</a></div>
+            <a href="desenvolvedores.html"><div class="opcoes">Desenvolvedores</div></a>
         </nav>
 
         <section id="black-promotion">
@@ -214,6 +214,6 @@
         <script src="scripts/chess.js"></script>
         <script src="scripts/menus.js"></script>
         <script src="scripts/login.js"></script>
-        <script src="scripts/engines.js"></script>
+        <script src="engines/engines.js"></script>
     </body>
 </html>
