arrumei uns bugs que o edurardo deixou pq ele não sabe gerenciar merge

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div>
                         <h2></h2>
                         <p></p>
-                        <div id="tabuleiro-final"><img src="img/devs/8 Sem Título_20221023114358.png" id="pecas-resultado"></div>
+                        <div id="tabuleiro-final"><img src="" id="pecas-resultado"></div>
                     </div>
                     <div class="opcoes reset">Play again</div>
                     <div class="opcoes" id="save">Save</div>
