so colocando uns detalhes

--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -63,7 +63,7 @@
                     <span class="github"><a href="https://github.com/edu15076">edu15076</a></span>
                 </div>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Eduardo foi um dos desenvolvedores desse site, que foi criado em meados de 2022 durante o primeiro ano dele na instituição CEFET-MG onde cursa ou cursou, dependendo da data que esse texto está sendo lido, o curso de informática. Nesse primeiro ano a matéria com a qual ele tinha mais afinco era LALP, isso contando os dois cursos o médio e o técnico, se ele tivesse que escolher uma matéria do médio como preferida é certo que escolheria matemática pois nela era fissurado. Enquanto não estudava Eduardo gostava de praticar esportes coletivos, jogar joguinhos no computador e, principalmente, de dormir no canil com suas cachorras Lola e Lessi, as quais ama mais do que a própria mãe.
                 </p>
             </article>
             <article class="conteudo">
