--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
         <script src="scripts/menus.js"></script>
         <script src="scripts/login.js"></script>
         <script src="engines/engines.js"></script>
+        <script src="engines/cumbuca.js"></script>
         <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
     </body>
 </html>
