login pra celular, devs, engine

--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -53,7 +53,7 @@
                     <span class="github"><a href="https://github.com/Arthur-Teles">Arthur-Teles</a></span>
                 </div>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Salve! Meu nome é Arthur Leão e fui um dos três desenvolvedores de site muito bacana. Tenho 15 anos e comecei a programar nesse ano, 2022. Desde março tenho gostado cada vez mais de programar, já que é uma atividade muito prazerosa, por mais que desafiadora. Algumas curiosidades sobre mim: faço karatê, minha matéria favorita é matemática, jogo xadrez, e pretendo continuar nessa carreira de programação mesmo, futuramente cursando ciência da computação ou engenharia de sofware (estou um pouco na dúvida de qual desses cursos fazer rsrsrs). Aproveitem o site, s se quiserem um oponente mais desafiador, joguem contr a minha engine :) rssrsrs.
                 </p>
             </article>
             <article class="conteudo">
