--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
         <script src="scripts/login.js"></script>
         <script src="engines/engines.js"></script>
         <script src="engines/cumbuca.js"></script>
+        <script src="engines/sei-mate-pastor.js"></script>
         <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
     </body>
 </html>
