engine, lances escritos, login, menu

--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@
                 </section>
             </div>
 
+            <!--<div id="cover-moves-made">
+                <div id="moves-made"></div>
+            </div>-->
+
         </main>
 
         <div id="cover"></div>
@@ -225,7 +229,10 @@
                 <div id="login-inicial">
                     <div id="login-existente">
                         <input type="text" placeholder="User" minlength="5" maxlength="20" id="nome-logar" class="input-login">
-                        <input type="password" placeholder="Password" minlength="8" maxlength="25" id="senha-logar" class="input-login">
+                        <div class="login-olho">
+                            <input type="password" placeholder="Password" minlength="8" maxlength="25" id="senha-logar" class="input-login">
+                            <label for="senha-logar" class="olho"><img src="img/olho-aberto.png" class="olho-img"></label>
+                        </div>
                     </div>
                     <button id="botao-login" class="botoes" type="submit">Login</button>
                     <p>No account? <button>Join</button> us!</p>
@@ -234,8 +241,14 @@
                     <div id="logon-input">
                         <input type="text" placeholder="User name" minlength="5" maxlength="20" id="novo-nome" class="input-login">
                         <input type="email" placeholder="Email" step="1" id="email" class="input-login">
-                        <input type="password" placeholder="New password" minlength="8" maxlength="25" id="nova-senha" class="input-login">
-                        <input type="password" placeholder="Confirm password" minlength="8" maxlength="25" class="input-login" id="senha-confirmacao">
+                        <div class="login-olho">
+                            <input type="password" placeholder="New password" minlength="8" maxlength="25" id="nova-senha" class="input-login">
+                            <label for="nova-senha" class="olho"><img src="img/olho-aberto.png" class="olho-img"></label>
+                        </div>
+                        <div class="login-olho">
+                            <input type="password" placeholder="Confirm password" minlength="8" maxlength="25" class="input-login" id="senha-confirmacao">
+                            <label for="senha-confirmacao" class="olho"><img src="img/olho-aberto.png" class="olho-img"></label>
+                        </div>
                     </div>
                     <button id="botao-confirmar" class="botoes" type="submit">Create</button>
                 </div>
