--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -48,7 +48,7 @@
             </article>
             <article class="conteudo">
                 <div class="dev-dados">
-                    <img src="img/devs/8 Sem Título_20221023114358.png">
+                    <img src="img/ArthurT.jpg">
                     <h3 id="arthur">Arthur Leão</h3>
                     <span class="github"><a href="https://github.com/Arthur-Teles">Arthur-Teles</a></span>
                 </div>
@@ -58,7 +58,7 @@
             </article>
             <article class="conteudo">
                 <div class="dev-dados">
-                    <img src="img/devs/8 Sem Título_20221023114358.png">
+                    <img src="https://edu15076.github.io/doritos/img/Eduardo.jpg">
                     <h3 id="eduardo">Eduardo Costa</h3>
                     <span class="github"><a href="https://github.com/edu15076">edu15076</a></span>
                 </div>
