index com novas engine

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                 <div>
                     <select>
                         <option class="option" value="you">you</option>
-                        <option class="option" value="cumbuca (2000)">cumbuca</option>
-                        <option class="option" value="stockdog (2000)">stockdog</option>
+                        <option class="option" value="cumbuca (1500)">cumbuca</option>
+                        <option class="option" value="sei-mate-pastor (800)">sei mate pastor</option>
                         <option class="option" value="random engine (???)">random engine</option>
                     </select>
                 </div>
@@ -104,8 +104,8 @@
                 <div>
                     <select>
                         <option class="option" value="you">you</option>
-                        <option class="option" value="cumbuca (2000)">cumbuca</option>
-                        <option class="option" value="stockdog (2000)">stockdog</option>
+                        <option class="option" value="cumbuca (1500)">cumbuca</option>
+                        <option class="option" value="sei-mate-pastor (800)">sei mate pastor</option>
                         <option class="option" value="random engine (???)">random engine</option>
                     </select>
                 </div>
