Mudei o meu texto do sobre nós e mudei 6 linhas na cumbuca :)

--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -63,7 +63,7 @@
                     <span class="github"><a href="https://github.com/edu15076">edu15076</a></span>
                 </div>
                 <p>
-                    Eduardo foi um dos desenvolvedores desse site, que foi criado em meados de 2022 durante o primeiro ano dele na instituição CEFET-MG onde cursa ou cursou, dependendo da data que esse texto está sendo lido, o curso de informática. Nesse primeiro ano a matéria com a qual ele tinha mais afinco era LALP, isso contando os dois cursos o médio e o técnico, se ele tivesse que escolher uma matéria do médio como preferida é certo que escolheria matemática pois nela era fissurado. Enquanto não estudava Eduardo gostava de praticar esportes coletivos, jogar joguinhos no computador e, principalmente, de dormir no canil com suas cachorras Lola e Lessi, as quais ama mais do que a própria mãe.
+                    Eduardo foi um dos desenvolvedores desse site, que foi criado no fim de 2022 durante o seu primeiro ano cursando informática na instituição CEFET-MG. Eduardo desenvolveu boa parte do tabuleiro em si, além, é claro, de sua incrível engine de xadrez Cumbuca que tem um rating de 1500 avaliada em jogos contra outras engines conhecidas. Eduardo, embora ótimo programador front-end, tem mais afinidade com a programação back-end que estuda com ainda mais empenho. Ele também gosta de estudar matemática na qual é fissurado. Enquanto não estudava Eduardo gostava de praticar esportes coletivos, jogar joguinhos no computador e, principalmente, de dormir no canil com suas cachorras Lola e Lessi.
                 </p>
             </article>
             <article class="conteudo">
