contabiliza vitórias, derrotas e ponto

--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -48,7 +48,7 @@
             </article>
             <article class="conteudo">
                 <div class="dev-dados">
-                    <img src="img/ArthurT.jpg">
+                    <img src="img/devs/ArthurT.jpg">
                     <h3 id="arthur">Arthur Leão</h3>
                     <span class="github"><a href="https://github.com/Arthur-Teles">Arthur-Teles</a></span>
                 </div>
@@ -68,7 +68,7 @@
             </article>
             <article class="conteudo">
                 <div class="dev-dados">
-                    <img src="img/devs/8 Sem Título_20221023114358.png">
+                    <img src="img/devs/Eloy.jpg">
                     <h3 id="eloy">Eloy Ribeiro</h3>
                     <span class="github"><a href="https://github.com/El0y-C0SM0">El0y-c0sm0</a></span>
                 </div>
